fixed layout issue with sidebar and topnav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 .sidebar {
   width: 260px;
   background: #fff;
-  border-right: 1px solid #eee;
   padding: 2rem 1rem;
   height: 100vh;
   position: fixed;
-  top: 0;
+  top: 100px;
   left: 0;
   overflow-y: auto;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
 }
@@ -58,7 +58,6 @@
 }
 .sidebar__nav .sidebar__section li.active a {
   color: #65c100;
-  font-weight: bold;
 }
 .sidebar__nav .sidebar__section li .badge {
   background: #65c100;
@@ -100,7 +99,7 @@
   margin-right: 1rem;
 }
 .top-nav__left h1 {
-  font-size: 1rem;
+  font-size: 1.125rem;
   margin: 0;
 }
 .top-nav__left span {
@@ -176,6 +175,7 @@
 .top-nav__right .icon-button img {
   width: 24px;
   height: 24px;
+  cursor: pointer;
 }
 .top-nav__right .icon-button.notification .badge {
   position: absolute;
@@ -184,6 +184,7 @@
   background-color: #65c100;
   color: white;
   font-size: 0.65rem;
+  cursor: pointer;
   border-radius: 50%;
   padding: 3.5px 6.5px;
 }
@@ -191,11 +192,6 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-}
-
-.main-content-wrapper {
-  margin-left: 250px;
-  padding-top: 80px;
 }
 
 body {
