--- a/scss/layout/sidebar.scss
+++ b/scss/layout/sidebar.scss
@@ -1,13 +1,14 @@
 .sidebar {
   width: 260px;
   background: #fff;
-  border-right: 1px solid #eee;
   padding: 2rem 1rem;
   height: 100vh;
   position: fixed;
-  top: 0;
+//   padding-top: 110px;
+  top: 100px;
   left: 0;
   overflow-y: auto;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
 
@@ -35,10 +36,9 @@
     .sidebar__label {
       font-size: 0.75rem;
       text-transform: uppercase;
-      margin: 1.4rem  0rem;
+      margin: 1.4rem 0rem;
       font-weight: 700;
       padding: 0rem 1rem;
-
     }
 
     .sidebar__section {
@@ -67,7 +67,6 @@
 
         &.active a {
           color: #65c100;
-          font-weight: bold;
         }
 
         .badge {
